// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleTransition should default to not and using the horizontal transition 1`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
</body>
`;

exports[`ScaleTransition should default to not and using the horizontal transition 2`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      class="rmd-transition--scale-enter rmd-transition--scale-enter-active"
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should default to not and using the horizontal transition 3`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should default to not and using the horizontal transition 4`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      class="rmd-transition--scale-exit rmd-transition--scale-exit-active"
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should default to not and using the horizontal transition 5`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
</body>
`;

exports[`ScaleTransition should default to not and using the horizontal transition 6`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
  <div
    class="rmd-transition--scale-enter rmd-transition--scale-enter-active"
    data-testid="element"
  >
    This is some content.
  </div>
</body>
`;

exports[`ScaleTransition should default to not and using the horizontal transition 7`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</body>
`;

exports[`ScaleTransition should default to not and using the horizontal transition 8`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
  <div
    class="rmd-transition--scale-exit rmd-transition--scale-exit-active"
    data-testid="element"
  >
    This is some content.
  </div>
</body>
`;

exports[`ScaleTransition should default to not and using the horizontal transition 9`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
</body>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 1`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      class="custom-class"
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 2`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      class="custom-class rmd-transition--scale-exit rmd-transition--scale-exit-active"
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 3`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
</body>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 4`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      class="custom-class rmd-transition--scale-enter rmd-transition--scale-enter-active"
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 5`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      class="custom-class"
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should render correctly for a vertical transition 1`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
</body>
`;

exports[`ScaleTransition should render correctly for a vertical transition 2`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      class="rmd-transition--scale-y-enter rmd-transition--scale-y-enter-active"
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should render correctly for a vertical transition 3`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should render correctly for a vertical transition 4`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
    <div
      class="rmd-transition--scale-y-exit rmd-transition--scale-y-exit-active"
      data-testid="element"
    >
      This is some content.
    </div>
  </div>
</body>
`;

exports[`ScaleTransition should render correctly for a vertical transition 5`] = `
<body>
  <div>
    <button
      type="button"
    >
      Toggle
    </button>
  </div>
</body>
`;
